[gd_scene load_steps=32 format=3 uid="uid://8ux3cn6gg08b"]

[ext_resource type="Script" uid="uid://bvytsrn1tuvka" path="res://Script/enemy.gd" id="1_kpr8r"]
[ext_resource type="Texture2D" uid="uid://brgbgika5jn6q" path="res://Sprites/soldier-sprite-sheets-pixel-art/Soldier_3/Idle.png" id="1_wovta"]
[ext_resource type="Texture2D" uid="uid://ljhdr5ibwi4q" path="res://Sprites/soldier-sprite-sheets-pixel-art/Soldier_3/Dead.png" id="2_tm3ti"]
[ext_resource type="Texture2D" uid="uid://v3tdv1dlve44" path="res://Sprites/soldier-sprite-sheets-pixel-art/Soldier_3/Shot_1.png" id="2_xeo28"]
[ext_resource type="Texture2D" uid="uid://b66pj6xvus5bp" path="res://Sprites/soldier-sprite-sheets-pixel-art/Soldier_3/Walk.png" id="3_xeo28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xcsop"]
atlas = ExtResource("2_tm3ti")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi2g3"]
atlas = ExtResource("2_tm3ti")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0xts"]
atlas = ExtResource("2_tm3ti")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tuc6"]
atlas = ExtResource("2_tm3ti")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo6wo"]
atlas = ExtResource("2_tm3ti")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpr8r"]
atlas = ExtResource("1_wovta")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1exfc"]
atlas = ExtResource("1_wovta")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo1ky"]
atlas = ExtResource("1_wovta")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bs3c"]
atlas = ExtResource("1_wovta")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoxpr"]
atlas = ExtResource("1_wovta")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_idouy"]
atlas = ExtResource("1_wovta")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o0ue"]
atlas = ExtResource("1_wovta")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s1gy"]
atlas = ExtResource("2_xeo28")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uihya"]
atlas = ExtResource("2_xeo28")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ry8"]
atlas = ExtResource("2_xeo28")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_esfq3"]
atlas = ExtResource("2_xeo28")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlal6"]
atlas = ExtResource("3_xeo28")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dascy"]
atlas = ExtResource("3_xeo28")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm7px"]
atlas = ExtResource("3_xeo28")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yix0"]
atlas = ExtResource("3_xeo28")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_imorw"]
atlas = ExtResource("3_xeo28")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vprv"]
atlas = ExtResource("3_xeo28")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovthj"]
atlas = ExtResource("3_xeo28")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2hgq"]
atlas = ExtResource("3_xeo28")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_qlal6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcsop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi2g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0xts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tuc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo6wo")
}],
"loop": true,
"name": &"dead_animation",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpr8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1exfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo1ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bs3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoxpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idouy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o0ue")
}],
"loop": true,
"name": &"idel_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uihya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ry8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esfq3")
}],
"loop": true,
"name": &"shoot_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlal6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dascy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm7px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yix0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imorw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vprv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovthj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2hgq")
}],
"loop": true,
"name": &"walk_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dascy"]
radius = 8.0
height = 58.0

[node name="SniperEnemy" type="CharacterBody2D"]
script = ExtResource("1_kpr8r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qlal6")
animation = &"shoot_animation"
autoplay = "idel_animation"
frame_progress = 0.82133526

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 36)
shape = SubResource("CapsuleShape2D_dascy")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(-6, 58)
target_position = Vector2(7, 0)
collision_mask = 3

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-6, 58)
target_position = Vector2(-11, 0)
collision_mask = 3

[node name="Line_of_Sight" type="RayCast2D" parent="."]
position = Vector2(-3, 6)
target_position = Vector2(315, 214)
collision_mask = 3

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(22, 12)
